# klc-compiler

./: .clang-tidy  .gitignore  CMakeLists.txt  LINKS.md  README.md  \
planning/: grammar.md  rough.json
sandbox/: a.asm
src/: code-generator.cpp  code-generator.hpp  klc-compiler.cpp  lexer.cpp  lexer.hpp  main.cpp  nodes.hpp  parser.cpp  parser.hpp  syntax-tree.cpp  syntax-tree.hpp  tokenizer.cpp  tokenizer.hpp
src/include/: tokenizer.cpp  tokenizer.hpp  utils.hpp
src/knv/: benchmark.knv  cond.knv  func.knv  intdiv.knv  knob  knob.knv  knob.s  op  op.s  optest.knv
tests/: CodeGeneratorTests.cpp  CodeGeneratorTests.knv  klc-tests.cpp
